--- a/GOOS_Sample/GOOS_Sample.csproj
+++ b/GOOS_Sample/GOOS_Sample.csproj
@@ -195,6 +195,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BudgetModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\IBudgetService.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ViewModels\BudgetAddViewModel.cs" />
