--- a/GOOS_Sample/GOOS_Sample.csproj
+++ b/GOOS_Sample/GOOS_Sample.csproj
@@ -177,6 +177,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\BudgetService.cs" />
     <Compile Include="Models\DataModels\Budget.cs">
       <DependentUpon>BudgetModel.tt</DependentUpon>
     </Compile>
