--- a/GOOS_Sample/GOOS_Sample.csproj
+++ b/GOOS_Sample/GOOS_Sample.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Models\IBudgetService.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Repositories\IRepository.cs" />
     <Compile Include="Models\ViewModels\BudgetAddViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
