--- a/GOOS_SampleTests/GOOS_SampleTests.csproj
+++ b/GOOS_SampleTests/GOOS_SampleTests.csproj
@@ -173,11 +173,18 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BudgetCreate.feature</DependentUpon>
     </Compile>
+    <Compile Include="features\BudgetQuery.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BudgetQuery.feature</DependentUpon>
+    </Compile>
     <Compile Include="Models\BudgetServiceTests.cs" />
     <Compile Include="PageObjects\BudgetCreatePage.cs" />
+    <Compile Include="PageObjects\BudgetQueryPage.cs" />
     <Compile Include="PageObjects\PageContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="steps\BudgetCreateSteps.cs" />
+    <Compile Include="steps\BudgetQuerySteps.cs" />
     <Compile Include="steps\Common\Hooks.cs" />
     <Compile Include="steps\Common\InsertTable.cs" />
   </ItemGroup>
@@ -209,6 +216,10 @@
     <None Include="features\BudgetCreate.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>BudgetCreate.feature.cs</LastGenOutput>
+    </None>
+    <None Include="features\BudgetQuery.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>BudgetQuery.feature.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
