--- a/GOOS_Sample/GOOS_Sample.csproj
+++ b/GOOS_Sample/GOOS_Sample.csproj
@@ -223,6 +223,7 @@
     <Compile Include="Models\Repositories\BudgetRepository.cs" />
     <Compile Include="Models\Repositories\IRepository.cs" />
     <Compile Include="Models\ViewModels\BudgetAddViewModel.cs" />
+    <Compile Include="Models\ViewModels\BudgetQueryViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -299,6 +300,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Budget\Add.cshtml" />
+    <Content Include="Views\Budget\Query.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
