refactor: move ExtensionMethod to new file and modify some public function to private

--- a/GOOS_Sample/GOOS_Sample.csproj
+++ b/GOOS_Sample/GOOS_Sample.csproj
@@ -217,6 +217,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BudgetModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\ExtensionMethod.cs" />
     <Compile Include="Models\IBudgetService.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
